--- a/app/assets/stylesheets/responsive/_settings.scss
+++ b/app/assets/stylesheets/responsive/_settings.scss
@@ -26,8 +26,8 @@ $color_dark_grey: #6c6b68;
 
 $color_neutral_light: $color_sand;
 $color_neutral_dark: $color_black;
-$color_primary: $color_violet;
-$color_secondary: $color_orange;
+$color_primary: $color_black;
+$color_secondary: $color_blue;
 
 $body-bg: $color_neutral_light;
 
